call MCRURIReolver.obtainInstance() if applicable #142 (#143)
- also: fix warnings for calls to new URL()